<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="header_category_rom_settings">Xtra settings</string>
    <string name="psx_header_bars">Bars</string>
    <string name="psx_header_buttons">Buttons</string>
    <string name="psx_header_interface">Interface</string>
    <string name="psx_header_lockscreen">Lockscreen</string>
    <string name="psx_header_statusbar">Status bar</string>
    <string name="psx_header_navbar">Navigation bar</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
	<string name="general_string">General</string>
    <string name="display_category_light_options_title">Light options</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Applications</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_enabled">Enabled</string>
    <string name="notification_light_disabled">Disabled</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_choose_app">Choose application</string>
    <string name="notification_light_add">Add</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="picker_arrow">→</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_test">Test</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="dialog_test_message">Turn the screen off to see the selected notification in action or dismiss this dialog to stop the test</string>
    <string name="dialog_test_button">Dismiss</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="battery_reset_title">Reset</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors while charging</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Medium charge</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="quiet_hours_summary">Configure the hours the device should be quiet</string>
    <string name="quiet_hours_note_title">Note</string>
    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
    <string name="quiet_hours_enabled">Enable quiet hours</string>
    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
    <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
    <string name="quiet_hours_start">Start of quiet hours</string>
    <string name="quiet_hours_start_summary">When to start enforcing quiet hours</string>
    <string name="quiet_hours_end">End of quiet hours</string>
    <string name="quiet_hours_end_summary">When to stop enforcing quiet hours</string>
    <string name="quiet_hours_mute">Mute notifications</string>
    <string name="quiet_hours_mute_on">No sounds will be played</string>
    <string name="quiet_hours_mute_off">Sounds will play like normal</string>
    <string name="quiet_hours_still">Disable vibrations</string>
    <string name="quiet_hours_still_on">Device will not vibrate</string>
    <string name="quiet_hours_still_off">Device will vibrate normally</string>
    <string name="quiet_hours_dim">Disable notification light</string>
    <string name="quiet_hours_dim_on">Notification light will be disabled</string>
    <string name="quiet_hours_dim_off">Notification light will function as normal</string>
    <string name="quiet_hours_haptic">Disable haptic feedback</string>
    <string name="quiet_hours_haptic_on">Haptic feedback will be disabled</string>
    <string name="quiet_hours_haptic_off">Haptic feedback will function as normal</string>
    <string name="quiet_hours_active_from">Active from</string>
    <string name="quiet_hours_active_to">to</string>
    <string name="start_time_title">Start</string>
    <string name="end_time_title">End</string>
    <string name="notifications_category_title">Notifications</string>
    <string name="less_notification_sounds_title">Less frequent notification sounds</string>
    <string name="less_notification_sounds_summary">Limit the notification sounds of each app to only play once per set time period</string>
    <string name="less_notification_sounds_default">Default Behaviour</string>
    <string name="less_notification_sounds_3s">3 seconds</string>
    <string name="less_notification_sounds_5s">5 seconds</string>
    <string name="less_notification_sounds_10s">10 seconds</string>
    <string name="less_notification_sounds_15s">15 seconds</string>
    <string name="less_notification_sounds_30s">30 seconds</string>
    <string name="less_notification_sounds_45s">45 seconds</string>
    <string name="less_notification_sounds_1m">1 minute</string>
    <string name="less_notification_sounds_2m">2 minutes</string>
    <string name="less_notification_sounds_5m">5 minutes</string>
  <string name="status_bar_show_battery_percent">Show battery percent</string>
  <string name="status_bar_show_battery_percent_summary">Shows the battery state in percent inside of the battery symbol</string>
    <string name="navigation_bar_height">Navigation bar height</string>
    <string name="navigation_bar_height_48">48dp (default)</string>
    <string name="navigation_bar_height_44">44dp</string>
    <string name="navigation_bar_height_40">40dp</string>
    <string name="navigation_bar_height_36">36dp</string>
    <string name="navigation_bar_height_32">32dp</string>
    <string name="navigation_bar_height_28">28dp</string>
    <string name="navigation_bar_height_24">24dp</string>
    <string name="navigation_bar_height_20">20dp</string>
    <string name="navigation_bar_height_0">0dp (hide)</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_prefs_always">Always visible</string>
    <string name="powermenu_prefs_onlyunlocked">Only visible while unlocked</string>
    <string name="powermenu_prefs_never">Never visible</string>
    <string name="powermenu_reboot_prefs_title">Reboot</string>
    <string name="powermenu_reboot_prefs_summary">%1$s</string>
    <string name="powermenu_shutdown_prefs_title">Shutdown</string>
    <string name="powermenu_shutdown_prefs_summary">%1$s</string>
    <string name="powermenu_airplanemode_prefs_title">Airplane Mode</string>
    <string name="powermenu_airplanemode_prefs_summary">%1$s</string>
    <string name="powermenu_silentmode_prefs_title">Silent Mode</string>
    <string name="powermenu_silentmode_prefs_summary">%1$s</string>
    <string name="powermenu_userswitch_prefs_title">User Selection</string>
    <string name="powermenu_userswitch_prefs_summary">%1$s</string>
    <string name="powermenu_screenshot_prefs_title">Screenshot</string>
    <string name="powermenu_screenshot_prefs_summary">%1$s</string>
    <string name="powermenu_torch_prefs_title">Torch</string>
    <string name="powermenu_torch_prefs_summary">%1$s</string>
    <string name="kernel_settings_header">Kernel Settings</string>
    <string name="kernel_settings_force_fastcharge_title">Force fastcharge</string>
    <string name="kernel_settings_force_fastcharge_summary_on">fastcharge is forced</string>
    <string name="kernel_settings_force_fastcharge_summary_off">fastcharge is not forced</string>
    <string name="kernel_settings_force_fastcharge_summary_unsupported">fastcharge is not supported</string>
    <string name="kernel_settings_governor_title">Governor</string>
    <string name="kernel_settings_cpu_frequency_title">CPU frequency</string>
    <string name="kernel_settings_cpu_frequency_min_title">Minimum frequency</string>
    <string name="kernel_settings_cpu_frequency_max_title">Maximum frequency</string>
    <string name="kernel_settings_cpu_frequency_apply_title">Apply on boot</string>
    <string name="kernel_settings_cpu_frequency_apply_summary_disabled">Do not apply on boot</string>
    <string name="kernel_settings_cpu_frequency_apply_summary_enabled">Apply on boot</string>
    <string name="kernel_settings_cpu_inputboost_title">CPU-Boost driver</string>
    <string name="kernel_settings_cpu_inputboost_ms">Inputboost</string>
    <string name="kernel_settings_cpu_inputboost_ms_summary">boosts cpu for %1$s ms</string>
    <string name="kernel_settings_cpu_inputboost_freq">Inputboost frequency</string>
    <string name="kernel_settings_cpu_boost_apply">Apply on boot</string>
    <string name="kernel_settings_cpu_boost_apply_disabled">Do not apply on boot</string>
    <string name="kernel_settings_cpu_boost_apply_enabled">Apply on boot</string>
    <string name="kernel_settings_cpu_boost_ms">Peak Boost time</string>
    <string name="kernel_settings_cpu_boost_ms_summary">boosts cpu for %1$s ms on load peaks</string>
    <string name="kernel_settings_cpu_sync_threshold">Sync threshold frequency</string>
    <string name="kernel_settings_frequency_summary">Current: %1$s kHz</string>
    <string name="swipe_for_qs_title">Pulldown for QS</string>
    <string name="swipe_for_qs_off">Off</string>
    <string name="swipe_for_qs_right">Right</string>
    <string name="swipe_for_qs_left">Left</string>
    <string name="safe_headset_volume_warning_title">Volume warning</string>
    <string name="safe_headset_volume_warning_summary">Show safe headset volume warning</string>
    <string name="increasing_ring_title">Ascending ringtone</string>
    <string name="checkbox_increasing_ring">Enable</string>
    <string name="increasing_ring_min_volume_title">Ringing start volume</string>
    <string name="increasing_ring_volume_notice">Notice:\nAs the start volume is set higher than the ringer volume, the ring tone will be played using the ringer volume.</string>
    <string name="increasing_ring_interval_title">Increase interval</string>
    <string name="increasing_ring_interval_eachring">On each ring</string>
    <string name="increasing_ring_interval_half_second">0.5 seconds</string>
    <string name="increasing_ring_interval_1second">1 second</string>
    <string name="increasing_ring_interval_2seconds">2 seconds</string>
    <string name="pref_volume_rocker_category">Volume rocker</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume rocker will wake your Nexus</string>
    <string name="volbtn_music_controls_title">Volume rocker music controls</string>
    <string name="volbtn_music_controls_summary">When screen off, long-pressing the volume rocker will seek music tracks</string>
</resources>