<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/kernel_settings_header">

    <CheckBoxPreference
        android:key="kernel_settings_force_fastcharge"
        android:title="@string/kernel_settings_force_fastcharge_title"
        android:summary="@string/kernel_settings_force_fastcharge_summary_unsupported"
        android:defaultValue="false" />
    
    <ListPreference
        android:key="kernel_settings_governor"
        android:dialogTitle="@string/kernel_settings_governor_title"
        android:title="@string/kernel_settings_governor_title" />

    <PreferenceCategory
        android:key="kernel_settings_cpu_frequency_category"
        android:title="@string/kernel_settings_cpu_frequency_title" >

        <ListPreference
            android:key="kernel_settings_cpu_frequency_min"
            android:dialogTitle="@string/kernel_settings_cpu_frequency_min_title"
            android:title="@string/kernel_settings_cpu_frequency_min_title" />

        <ListPreference
            android:key="kernel_settings_cpu_frequency_max"
            android:dialogTitle="@string/kernel_settings_cpu_frequency_max_title"
            android:title="@string/kernel_settings_cpu_frequency_max_title" />

        <CheckBoxPreference
            android:key="kernel_settings_cpu_frequency_apply"
            android:title="@string/kernel_settings_cpu_frequency_apply_title"
            android:summary="@string/kernel_settings_cpu_frequency_apply_summary_disabled"
            android:defaultValue="false" />
            
    </PreferenceCategory>

    <PreferenceCategory
        android:key="kernel_settings_cpu_inputboost_title"
        android:title="@string/kernel_settings_cpu_inputboost_title" >

        <ListPreference
            android:key="kernel_settings_cpu_inputboost_freq"
            android:dialogTitle="@string/kernel_settings_cpu_inputboost_freq"
            android:title="@string/kernel_settings_cpu_inputboost_freq" />

        <ListPreference
            android:key="kernel_settings_cpu_sync_threshold"
            android:dialogTitle="@string/kernel_settings_cpu_sync_threshold"
            android:title="@string/kernel_settings_cpu_sync_threshold" />

        <EditTextPreference
            android:key="kernel_settings_cpu_inputboost_ms"
            android:summary="@string/kernel_settings_cpu_inputboost_ms_summary"
            android:title="@string/kernel_settings_cpu_inputboost_ms"
            android:defaultValue="1000"
            android:inputType="number"
         />            

        <EditTextPreference
            android:key="kernel_settings_cpu_boost_ms"
            android:summary="@string/kernel_settings_cpu_boost_ms_summary"
            android:title="@string/kernel_settings_cpu_boost_ms"
            android:defaultValue="20"
            android:inputType="number"
         />            
         
        <CheckBoxPreference
            android:key="kernel_settings_cpu_boost_apply"
            android:title="@string/kernel_settings_cpu_boost_apply"
            android:summary="@string/kernel_settings_cpu_boost_apply_disabled"
            />
            
    </PreferenceCategory>

    <PreferenceCategory
        android:key="kernel_settings_msmhotplug_title"
        android:title="@string/kernel_settings_msmhotplug_title" >

        <ListPreference
            android:key="kernel_settings_msmhotplug_min_cpus_online"
            android:dialogTitle="@string/kernel_settings_msmhotplug_min_cpus_online"
            android:title="@string/kernel_settings_msmhotplug_min_cpus_online" />

        <ListPreference
            android:key="kernel_settings_msmhotplug_max_cpus_online"
            android:dialogTitle="@string/kernel_settings_msmhotplug_max_cpus_online"
            android:title="@string/kernel_settings_msmhotplug_max_cpus_online" />

        <CheckBoxPreference
            android:key="kernel_settings_msmhotplug_apply"
            android:title="@string/kernel_settings_msmhotplug_apply"
            android:summary="@string/kernel_settings_cpu_boost_apply_disabled"
            />
            
    </PreferenceCategory>
        
</PreferenceScreen>
