<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/psx_header_buttons">

  <!-- PowerMenu -->

    <PreferenceScreen
        android:key="power_menu"
        android:fragment="net.purespeedx.psxxtras.PowermenuSettings"
        android:title="@string/powermenu_title" />
		
   <PreferenceCategory
        android:key="volume_rocker_category"
        android:title="@string/pref_volume_rocker_category" >
    
	    <CheckBoxPreference
            android:key="pref_volume_wake"
            android:title="@string/pref_volume_wake_title"
            android:summary="@string/pref_volume_wake_summary"
            android:defaultValue="false" />
    
        <CheckBoxPreference
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_music_controls_title"
            android:summary="@string/volbtn_music_controls_summary"
            android:persistent="false" />		
    </PreferenceCategory>
</PreferenceScreen>
